# flask-todo-app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
flask_todo_app/: __init__.py  auth.py  helpers.py  schema.sql  todo.py
flask_todo_app/static/: index.js  styles.css
flask_todo_app/templates/: index.html  index.html.jinja2  layout.html  login.html  login.html.jinja2
